--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ import Layout from '../layouts/Layout.astro';
           throw new Error(`HTTP error! status: ${response.status}`);
         }
         const text = await response.text();
-        console.log("Respuesta del servidor:", text); // Para depuración
+        //console.log("Respuesta del servidor:", text); // Para depuración
         currentVideos = JSON.parse(text);
         renderVideos();
       } catch (error) {
