--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,13 @@
 ---
 // index.astro
 import Layout from '../layouts/Layout.astro';
+
+// Añade este log al principio del archivo
+console.log("BASE_URL:", import.meta.env.BASE_URL);
+
+const basePath = import.meta.env.BASE_URL.endsWith('/')
+  ? import.meta.env.BASE_URL
+  : `${import.meta.env.BASE_URL}/`;
 ---
 
 <Layout title="CS2 Line-ups Viewer">
@@ -13,60 +20,66 @@ import Layout from '../layouts/Layout.astro';
     </h1>
 
     <!-- Barra de búsqueda, Selector de Mapa, Selector de Utilidad y Selector de Bando -->
-    <div class="flex flex-col sm:flex-row gap-4 mb-8 items-center justify-center">
+    <div class="flex flex-col gap-4 mb-8">
       <!-- Barra de Búsqueda -->
       <input
         id="searchBar"
         type="text"
         placeholder="Buscar videos..."
-        class="flex-grow bg-neutral-800 text-white placeholder-gray-400 border border-neutral-700 rounded-lg p-3 focus:ring-2 focus:ring-[#7877c6] transition duration-300"
+        class="w-full bg-neutral-800 text-white placeholder-gray-400 border border-neutral-700 rounded-lg p-3 focus:ring-2 focus:ring-[#7877c6] transition duration-300"
       />
 
-      <!-- Selector de Mapa -->
-      <select id="mapFilter" class="w-full sm:w-[200px] bg-neutral-800 text-white border border-neutral-700 rounded-lg p-3 appearance-none cursor-pointer focus:ring-2 focus:ring-[#7877c6] transition duration-300 bg-[url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7%207l3-3%203%203m0%206l-3%203-3-3%22%20fill%3D%22none%22%20stroke%3D%22%23fff%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E')] bg-no-repeat bg-[right_0.5rem_center] pr-8">
-        <option value="all">Seleccionar Mapa</option>
-        <option value="dust2">Dust 2</option>
-        <option value="inferno">Inferno</option>
-        <option value="mirage">Mirage</option>
-        <option value="ancient">Ancient</option>
-        <option value="anubis">Anubis</option>
-        <option value="vertigo">Vertigo</option>
-        <option value="nuke">Nuke</option>
-      </select>
+      <div class="flex flex-col sm:flex-row gap-4">
+        <!-- Selector de Mapa -->
+        <select id="mapFilter" class="w-full sm:w-1/3 bg-neutral-800 text-white border border-neutral-700 rounded-lg p-3 appearance-none cursor-pointer focus:ring-2 focus:ring-[#7877c6] transition duration-300 bg-[url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7%207l3-3%203%203m0%206l-3%203-3-3%22%20fill%3D%22none%22%20stroke%3D%22%23fff%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E')] bg-no-repeat bg-[right_0.5rem_center] pr-8">
+          <option value="all">Seleccionar Mapa</option>
+          <option value="dust2">Dust 2</option>
+          <option value="inferno">Inferno</option>
+          <option value="mirage">Mirage</option>
+          <option value="ancient">Ancient</option>
+          <option value="anubis">Anubis</option>
+          <option value="vertigo">Vertigo</option>
+          <option value="nuke">Nuke</option>
+        </select>
 
-      <!-- Selector de Utilidad -->
-      <select id="utilityFilter" class="w-full sm:w-[200px] bg-neutral-800 text-white border border-neutral-700 rounded-lg p-3 appearance-none cursor-pointer focus:ring-2 focus:ring-[#7877c6] transition duration-300 bg-[url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7%207l3-3%203%203m0%206l-3%203-3-3%22%20fill%3D%22none%22%20stroke%3D%22%23fff%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E')] bg-no-repeat bg-[right_0.5rem_center] pr-8">
-        <option value="all">Seleccionar Utilidad</option>
-        <option value="Smoke">Humos</option>
-        <option value="Molotov">Molotov</option>
-        <option value="Flash">Flash</option>
-      </select>
+        <!-- Selector de Utilidad -->
+        <select id="utilityFilter" class="w-full sm:w-1/3 bg-neutral-800 text-white border border-neutral-700 rounded-lg p-3 appearance-none cursor-pointer focus:ring-2 focus:ring-[#7877c6] transition duration-300 bg-[url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7%207l3-3%203%203m0%206l-3%203-3-3%22%20fill%3D%22none%22%20stroke%3D%22%23fff%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E')] bg-no-repeat bg-[right_0.5rem_center] pr-8">
+          <option value="all">Seleccionar Utilidad</option>
+          <option value="Smoke">Humos</option>
+          <option value="Molotov">Molotov</option>
+          <option value="Flash">Flash</option>
+        </select>
 
-      <!-- Selector de Bando -->
-      <div class="flex items-center space-x-4">
-        <label class="inline-flex items-center">
-          <input type="radio" name="sideFilter" value="all" checked class="form-radio text-[#7877c6] hidden">
-          <span class="ml-2 text-white cursor-pointer px-3 py-1 rounded-full bg-neutral-700 hover:bg-neutral-600 transition-colors">Todos</span>
-        </label>
-        <label class="inline-flex items-center">
-          <input type="radio" name="sideFilter" value="T" class="form-radio text-[#7877c6] hidden">
-          <span class="ml-2 cursor-pointer px-3 py-1 rounded-full bg-neutral-700 hover:bg-neutral-600 transition-colors flex items-center">
-            <img src={`${import.meta.env.BASE_URL}img/t.png`} alt="T" class="w-6 h-6 mr-1">
-            <span class="text-white">T</span>
-          </span>
-        </label>
-        <label class="inline-flex items-center">
-          <input type="radio" name="sideFilter" value="CT" class="form-radio text-[#7877c6] hidden">
-          <span class="ml-2 cursor-pointer px-3 py-1 rounded-full bg-neutral-700 hover:bg-neutral-600 transition-colors flex items-center">
-            <img src={`${import.meta.env.BASE_URL}img/ct.png`} alt="CT" class="w-6 h-6 mr-1">
-            <span class="text-white">CT</span>
-          </span>
-        </label>
+        <!-- Selector de Bando -->
+        <div class="flex justify-center sm:justify-end sm:w-1/3">
+          <div class="inline-flex rounded-md shadow-sm" role="group">
+            <label class="inline-flex items-center">
+              <input type="radio" name="sideFilter" value="all" checked class="sr-only">
+              <span class="px-5 py-2.5 text-base font-medium text-white bg-neutral-700 border border-neutral-600 rounded-l-lg hover:bg-neutral-600 focus:z-10 focus:ring-2 focus:ring-[#7877c6] focus:text-white cursor-pointer">
+                Todos
+              </span>
+            </label>
+            <label class="inline-flex items-center">
+              <input type="radio" name="sideFilter" value="T" class="sr-only">
+              <span class="px-5 py-2.5 text-base font-medium text-white bg-neutral-700 border-t border-b border-neutral-600 hover:bg-neutral-600 focus:z-10 focus:ring-2 focus:ring-[#7877c6] focus:text-white cursor-pointer flex items-center">
+                <img src={`${basePath}img/t.png`} alt="T" class="w-6 h-6 mr-2">
+                T
+              </span>
+            </label>
+            <label class="inline-flex items-center">
+              <input type="radio" name="sideFilter" value="CT" class="sr-only">
+              <span class="px-5 py-2.5 text-base font-medium text-white bg-neutral-700 border border-neutral-600 rounded-r-lg hover:bg-neutral-600 focus:z-10 focus:ring-2 focus:ring-[#7877c6] focus:text-white cursor-pointer flex items-center">
+                <img src={`${basePath}img/ct.png`} alt="CT" class="w-6 h-6 mr-2">
+                CT
+              </span>
+            </label>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- Galería de Videos -->
-    <div id="videoGallery" class="grid grid-cols-1 md:grid-cols-2 gap-8">
+    <div id="videoGallery" class="grid grid-cols-1 sm:grid-cols-2 gap-8">
       <!-- Aquí se mostrarán los videos filtrados -->
     </div>
   </main>
@@ -79,29 +92,18 @@ import Layout from '../layouts/Layout.astro';
     }
   </style>
 
-  <script>
-    // Definir el tipo de los videos
-    interface Video {
-      id: number;
-      title: string;
-      map: string;
-      type: string;
-      video: string;
-      side: string;
-    }
-
+  <script define:vars={{ basePath }}>
     // Referencias a los elementos del DOM
     const videoGallery = document.getElementById('videoGallery');
-    const mapFilter = document.getElementById('mapFilter') as HTMLSelectElement | null;
-    const utilityFilter = document.getElementById('utilityFilter') as HTMLSelectElement | null;
-    const searchBar = document.getElementById('searchBar') as HTMLInputElement | null;
+    const mapFilter = document.getElementById('mapFilter');
+    const utilityFilter = document.getElementById('utilityFilter');
+    const searchBar = document.getElementById('searchBar');
 
-    let currentVideos: Video[] = [];
+    let currentVideos = [];
 
     const sideFilter = document.querySelectorAll('input[name="sideFilter"]');
-
     // Función para cargar videos desde un archivo JSON
-    async function loadVideos(map: string) {
+    async function loadVideos(map) {
       if (!videoGallery) return;
 
       if (map === 'all') {
@@ -110,12 +112,12 @@ import Layout from '../layouts/Layout.astro';
         return;
       }
       try {
-        const response = await fetch(`${import.meta.env.BASE_URL}/data/${map}.json`);
+        const response = await fetch(`${basePath}data/${map}.json`);
         if (!response.ok) {
           throw new Error(`HTTP error! status: ${response.status}`);
         }
         const text = await response.text();
-        //console.log("Respuesta del servidor:", text); // Para depuración
+        console.log("Respuesta del servidor:", text); // Para depuración
         currentVideos = JSON.parse(text);
         renderVideos();
       } catch (error) {
@@ -129,9 +131,9 @@ import Layout from '../layouts/Layout.astro';
     function renderVideos() {
       if (!videoGallery || !utilityFilter || !searchBar) return;
 
-      const utilityValue = utilityFilter?.value?.toLowerCase() ?? '';
-      const searchValue = searchBar?.value?.toLowerCase() ?? '';
-      const sideValue = (document.querySelector('input[name="sideFilter"]:checked') as HTMLInputElement)?.value;
+      const utilityValue = utilityFilter.value.toLowerCase();
+      const searchValue = searchBar.value.toLowerCase();
+      const sideValue = document.querySelector('input[name="sideFilter"]:checked')?.value;
 
       const filteredVideos = currentVideos.filter(video => {
         const matchesUtility = utilityValue === 'all' || video.type.toLowerCase() === utilityValue;
@@ -167,28 +169,26 @@ import Layout from '../layouts/Layout.astro';
         videoGallery.appendChild(videoElement);
       });
     }
-
     // Función para extraer el ID del video de YouTube de la URL
-    function getYouTubeVideoId(url: string): string {
+    function getYouTubeVideoId(url) {
       const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
       const match = url.match(regExp);
       return (match && match[2].length === 11) ? match[2] : '';
     }
-
     // Función para obtener el icono del bando
-    function getSideIcon(side: string): string {
+    function getSideIcon(side) {
       if (side === 'T') {
-        return `<img src="${import.meta.env.BASE_URL}img/t.png" alt="T" class="w-4 h-4 mr-1">`;
+        return `<img src="${basePath}img/t.png" alt="T" class="w-4 h-4 mr-1">`;
       } else if (side === 'CT') {
-        return `<img src="${import.meta.env.BASE_URL}img/ct.png" alt="CT" class="w-4 h-4 mr-1">`;
+        return `<img src="${basePath}img/ct.png" alt="CT" class="w-4 h-4 mr-1">`;
       }
       return '';
     }
 
     // Manejar cambios en el filtro de mapa
-    mapFilter?.addEventListener('change', async (e) => {
-      const mapValue = (e.target as HTMLSelectElement).value.toLowerCase();
-      await loadVideos(mapValue);
+    mapFilter?.addEventListener('change', (e) => {
+      const mapValue = e.target.value.toLowerCase();
+      loadVideos(mapValue);
     });
 
     // Manejar cambios en los filtros de utilidad, búsqueda y bando
