--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,7 +117,7 @@ const basePath = import.meta.env.BASE_URL.endsWith('/')
           throw new Error(`HTTP error! status: ${response.status}`);
         }
         const text = await response.text();
-        console.log("Respuesta del servidor:", text); // Para depuración
+        //console.log("Respuesta del servidor:", text); // Para depuración
         currentVideos = JSON.parse(text);
         renderVideos();
       } catch (error) {
